# PiD

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  verify_env.py
assets/: clean_image_manifest.jsonl  clean_image_manifest_1024.jsonl
docker/: Dockerfile  Dockerfile.dockerignore  README.md  requirements-ngc-overlay.txt
docs/: FLUX2_2kto4k_new_ckpt_compare.md  boogu_image.md  checkpointing_CN.md  checkpointing_EN.md  checkpoints.md  dataloader_CN.md  dataloader_EN.md  dinov2_siglip.md  hydra_CN.md  hydra_EN.md  inference.md  repository_layout.md  training.md  webdataset_CN.md  webdataset_EN.md
pid/_ext/imaginaire/: config.py  flags.py  model.py  trainer.py
pid/_ext/imaginaire/checkpointer/: base.py  dcp.py  dummy.py  s3_filesystem.py  safe_broadcast.py
pid/_ext/imaginaire/dataloaders/: aspect_ratio_dataloader.py  cached_replay_dataloader.py  coupled_dataloader.py  joint_dataloader.py
pid/_ext/imaginaire/datasets/: mock_dataset.py  watchdog.py
pid/_ext/imaginaire/datasets/webdataset/: dataloader.py  webdataset.py
pid/_ext/imaginaire/functional/: batch_ops.py  lr_scheduler.py  multi_step.py  runge_kutta.py
pid/_ext/imaginaire/lazy_config/: file_io.py  instantiate.py  lazy.py  omegaconf_patch.py  registry.py
pid/_ext/imaginaire/types/: denoise_prediction.py
pid/_ext/imaginaire/utils/: callback.py  checkpointer.py  cluster_env.py  config_helper.py  context_managers.py  count_params.py  dataloader.py  dataset_utils.py  device.py  distributed.py  ema.py  ema_test.py  fsdp_helper.py  fused_adam.py  fused_nan_to_num.py  graph.py  launch.py  log.py  misc.py  object_store.py  optim_instantiate.py  parallel_state_helper.py  profiling.py  registry.py  s3_utils.py  scheduler.py  validator.py  validator_params.py  wandb_util.py
pid/_ext/imaginaire/utils/easy_io/: easy_io.py  file_client.py
pid/_ext/imaginaire/utils/env_parsers/: cred_env_parser.py  customization_env_parser.py  env_parser.py  inference_env_parser.py
pid/_ext/imaginaire/visualize/: __init__.py  img.py  video.py
pid/_src/callbacks/: compile_tokenizer.py  dataloading_monitor.py  device_monitor.py  eval_datasets.py  every_n.py  every_n_draw_sample.py  every_n_evaluate.py  grad_clip.py  heart_beat.py  iter_speed.py  low_precision.py  manual_gc.py  model_param_stats.py  model_weights_stats.py  wandb_distill_log.py  wandb_log.py
pid/_src/checkpointer/: dcp_distill.py
pid/_src/configs/common/defaults/: callbacks.py  checkpoint.py  ckpt_type.py  conditioner_pid.py  conditioner_pixeldit.py  dataloader.py  ema.py  net.py  optimizer.py  scheduler.py  tokenizer.py
pid/_src/configs/pid/: config.py
pid/_src/configs/pid/defaults/: model_pid_inference.py  tokenizer.py
pid/_src/configs/pid/experiment_2k/: flux.py  flux2.py  rae.py  scale_rae.py  sd3.py  shared_config.py
pid/_src/configs/pid/experiment_2kto4k/: qwenimage.py  sd3.py  sdxl.py  shared_config.py
pid/_src/configs/pid/experiment_2kto4k_v1pt5/: flux.py  flux2.py  qwenimage.py  shared_config.py
pid/_src/configs/pid_training/: config.py  shared_utils.py
pid/_src/dataprep/fix_batch_generation/: create_pid_fix_batch_asset.py  generate_callback_assets.sh  pipeline_registry.py
pid/_src/dataprep/prompts/: prompts_anime.txt  prompts_example.txt  prompts_harder_cases.txt
pid/_src/datasets/: augmentor_provider.py  dataset_provider.py  utils.py
pid/_src/datasets/augmentors/: add_aspect_ratio.py  blur_kernels.py  caption_augmentors.py  format_conversion.py  merge_datadict.py  multi_resolution_aspect_ratio.py  random_degradation_common.py  random_degradation_np.py  random_degradation_torch.py
pid/_src/datasets/data_sources/: data_registration.py  data_source_local.py  dataset_definition.py  mock_data.py
pid/_src/degradation/: __init__.py
pid/_src/evaluations/: __init__.py
pid/_src/evaluations/metrics/: __init__.py  base.py  image_metrics.py  video_metrics.py
pid/_src/inference/: checkpoint_registry.py  cli_utils.py  create_dataset.py  decoder.py  from_boogu.py  from_clean.py  from_ldm.py  from_ldm_zimage_turbo.py  inference_utils.py  pipeline_registry.py  rae_generation.py  scale_rae_generation.py  step_capture.py
pid/_src/inference/prompts/: prompt_boogu_working_cases.txt  prompt_zimage_turbo.txt
pid/_src/inference_internal/: pid_inference.py  pixeldit.py
pid/_src/losses/: dmd_losses.py  repa_loss.py
pid/_src/models/: latent_noising.py  pid_distill_model.py  pid_distill_model_infer.py  pid_model.py  pixeldit_model.py  utils.py
pid/_src/modules/: conditioner.py  ema.py
pid/_src/modules/dpmsolver/: __init__.py  dpm_solver.py  flow_dpm.py  gaussian_diffusion.py
pid/_src/networks/: discriminators.py  flow_matching.py  lq_projection_2d.py  pid_net.py  pixeldit_official.py
pid/_src/networks/repa/: feature_encoder.py
pid/_src/tokenizers/: base_vae.py  interface.py  qwenimage_vae.py  sdxl_vae.py
pid/_src/trainer/: __init__.py  trainer_distillation.py
pid/_src/utils/: context_parallel.py  misc.py  model_loader.py  torch_future.py
scripts/: convert_distcp_to_pt.py  download_multiaspect_4k_1m.py  multinode_slurm.sh  sharding_wds.py  train.py  validate_from_clean_checkpoints.py  validate_from_ldm_backbones.py  validate_webdataset_consistency.py
(+72 files in other folders)
