[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pid"
version = "0.1.0"
description = "PiD — Pixel Diffusion Decoder"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
authors = [
    {name = "NVIDIA CORPORATION & AFFILIATES"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base runtime for the released inference entry points. These dependencies are
# installed by `pip install .` and by a plain `uv sync`.
dependencies = [
    # Compute and image processing.
    "torch==2.10.0",
    "torchvision==0.25.0",
    "numpy==1.26.4",
    "Pillow>=11.1,<12",
    "einops>=0.8.1,<0.9",
    "opencv-python-headless==4.11.0.86",

    # Hugging Face inference stack.
    "diffusers==0.37.1",
    "transformers==4.57.1",
    "safetensors>=0.5.3,<1",
    "sentencepiece>=0.2,<0.3",
    "huggingface-hub>=0.36,<1",
    "accelerate>=1.1,<2",

    # Configuration and object construction.
    "attrs>=25.3,<26",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "PyYAML>=6.0.2,<7",
    "fvcore==0.1.5.post20221221",
    "iopath==0.1.10",

    # Logging and runtime utilities.
    "loguru>=0.7.3,<0.8",
    "termcolor>=3.1,<4",
    "tqdm>=4.67.1,<5",
    # Imported eagerly by the shared inference/distributed utilities.
    "nvidia-ml-py>=12.570.86,<13",
    "wandb>=0.20.1,<0.21",
    "pandas>=2.2.3,<2.3",
    "packaging==24.2",
    "imageio>=2.37,<3",

    # Optional S3 output support is imported by the inference I/O registry.
    "boto3>=1.38.31,<1.39",
    "botocore>=1.38.42,<1.39",
]

[dependency-groups]
full = [
    # Data pipeline and distributed training.
    "scipy==1.15.2",
    "webdataset==0.2.111",
    "megatron-core==0.16.1",
    # MCore imports torch.utils.cpp_extension at module import time, which in
    # turn imports setuptools even when no extension is being built.
    "setuptools==83.0.0",
    "psutil>=7,<8",
    "pytz>=2023.4",
    "tabulate>=0.9,<1",
    "urllib3>=2.0.7,<3",

    # Optional training features and evaluation callbacks.
    "peft==0.18.1",
    "torchmetrics==1.8.2",
    "scikit-image==0.25.2",
    "pyiqa==0.1.15.post2",
]
dev = [
    "pytest>=8.1,<9",
    "ruff>=0.15,<0.16",
    "pre-commit>=4.5,<5",
]

[project.urls]
Homepage = "https://github.com/nvidia/pid"
Repository = "https://github.com/nvidia/pid"

[tool.uv]
required-version = "==0.11.28"
# Keep a plain `uv sync` lightweight. Training explicitly opts into `full`.
default-groups = []
environments = [
    "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
build-constraint-dependencies = [
    "setuptools==83.0.0",
    "wheel==0.47.0",
]

# pyiqa publishes development tools as runtime requirements. They are not
# imported by its metric implementations; the project dev group adds back the
# tools PiD itself uses. facexlib's cv2 imports are satisfied by the headless
# OpenCV distribution above, so installing the GUI distribution is redundant.
exclude-dependencies = [
    { package = { name = "pyiqa", version = "0.1.15.post2" }, dependencies = ["pre-commit", "pytest", "ruff", "tensorboard", "yapf"] },
    { package = { name = "facexlib", version = "0.3.0" }, dependencies = ["opencv-python"] },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.setuptools]
# Auto-discover all packages

[tool.setuptools.packages.find]
# Include the pid directory and all its subdirectories
where = ["."]
include = ["pid*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
# Include all Python files and other required files
pid = ["py.typed", "**/*.py"]

# Ruff configuration - all-in-one Python tool (replaces black, isort, flake8, etc.)
[tool.ruff]
line-length = 120
target-version = "py312"

# Excluded directories
exclude = [
    "*.ipynb",
    "dist",
    "build",
    ".git",
    ".venv",
    ".eggs",
    ".tox",
    "__pycache__",
]

[tool.ruff.lint]
# Enabled rule sets (consistent with imaginaire4)
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (import排序)
    "TID252",  # relative-imports
    "T10",     # debugger
]

# Ignored rules (consistent with imaginaire4)
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "E501",  # line-too-long
    "E721",  # type-comparison
    "E741",  # ambiguous-variable-name
    "F541",  # f-string-missing-placeholders
    "F811",  # redefined-while-unused
    "F841",  # unused-variable
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["pid"]
